--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,25 @@
 version: '3'
 
 services:
-  db:
+  db_images:
     image: mysql:5.7
     environment:
       MYSQL_ROOT_PASSWORD: password
       MYSQL_DATABASE: images
     ports:
-      - "3306:3306"
+      - "3307:3306"
     volumes:
-      - db_data:/var/lib/mysql
+      - db_images_data:/var/lib/mysql
+
+  web_images:
+    build: .
+    ports:
+      - "5001:5001"
+    environment:
+      DB_HOST: db_images
+    depends_on:
+      - db_images
+    command: flask run --host=0.0.0.0 --port=5001  
 
 volumes:
-  db_data:
+  db_images_data:
